Using S3/Cloudfront on AWS as CDN

--- a/Public/css/resume-page.css
+++ b/Public/css/resume-page.css
@@ -1,7 +1,7 @@
 .resume {
     position: relative;
     background-color: #343a40;
-    background: url("../img/bg-masthead.png") no-repeat center center;
+    background: url("http://d3pkcrehufmgbl.cloudfront.net/bg-masthead.png") no-repeat center center;
     background-size: cover;
     padding-top: 8rem;
     padding-bottom: 8rem;
