--- a/Public/css/landing-page.css
+++ b/Public/css/landing-page.css
@@ -222,3 +222,14 @@ footer.footer {
 }
 
 .hide {display: none;}
+
+.pages-module--page--c87a5 .pages-module--topic--4288f {
+        border-image: linear-gradient(90deg, #481cab, #574797, #6f88c7, #639cc9, #31edd5) 1 0;
+        border-style: solid;
+        border-width: 0 0 4px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        padding-bottom: 20px;
+        width:200px
+    }
