--- a/Public/css/landing-page.css
+++ b/Public/css/landing-page.css
@@ -235,9 +235,9 @@ footer.footer {
     }
 
 .bg-black2 {
-  background-color: linear-gradient(90deg, #481cab, #574797, #6f88c7, #639cc9, #31edd5) 1 0;
+  background-image: linear-gradient(90deg, #481cab, #574797, #6f88c7, #639cc9, #31edd5) 1 0;
 }
 
-.bg-black2 {
+.bg-black {
   background-color: #000000;
 }
