--- a/Public/css/landing-page.css
+++ b/Public/css/landing-page.css
@@ -234,10 +234,7 @@ footer.footer {
         width:200px
     }
 
-.bg-black2 {
-  background-image: linear-gradient(90deg, #481cab, #574797, #6f88c7, #639cc9, #31edd5) 1 0;
+.bg-black {
+  background-color: #2c2d2e;
 }
 
-.bg-black {
-  background-color: #000000;
-}
