--- a/Public/css/resume-page.css
+++ b/Public/css/resume-page.css
@@ -1,7 +1,7 @@
 .resume {
     position: relative;
     background-color: #343a40;
-    background: url("https://s3.us-east-2.amazonaws.com/djmckay-tech/bg-masthead.png") no-repeat center center;
+    /*background: url("https://s3.us-east-2.amazonaws.com/djmckay-tech/bg-masthead.png") no-repeat center center;*/
     background-size: cover;
     padding-top: 8rem;
     padding-bottom: 8rem;
